<resources>
    <string name="app_name">Grit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="start">Start</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="complete_day">Complete Day</string>
    <string name="settings_start_text">Start Day one</string>
    <string name="reminder_time_prompt">Set the time for your daily reminder!</string>
    <string name="action_settings">Settings</string>
    <string name="end_day_notification">Your next day will be available at the set notification time!</string>
    <string name="start_prompt">Welcome to Grit! Your bar study mental stability check. Daily reminders to mediate and relax while you are studying. \n\n\n Press below to start! </string>
    <string name="day_notification">Day %d is ready to go!</string>
    <string name="colon">:</string>
</resources>
